--- a/Playground/src/index.css
+++ b/Playground/src/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 button {
-  background-color: indigo;
+  background-color: rgb(36, 36, 253);
   color: white;
   border-radius: 0.25rem;
   padding: 0.5rem 1rem;
@@ -35,9 +35,12 @@ input {
   height: 40px;
   border: 1px solid grey;
   margin: 10px 0;
+  border-radius: 15px;
 }
 textarea {
   border: 1px solid grey;
   margin: 10px 0;
   height: 100px;
+  border-radius: 15px;
 }
+
